--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,9 @@
     "iron-pages": "polymerelements/iron-pages#^2.0.0",
     "iron-selector": "polymerelements/iron-selector#^2.0.0",
     "paper-icon-button": "polymerelements/paper-icon-button#^2.0.0",
-    "paper-spinner": "polymerelements/paper-spinner#^2.0.0"
+    "paper-spinner": "polymerelements/paper-spinner#^2.0.0",
+    "paper-dialog": "^2.1.1",
+    "ace-widget": "LostInBrittany/ace-widget#^1.3.7"
   },
   "devDependencies": {
     "web-component-tester": "^6.0.0"
